--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		  package="com.android.ejiashuo"
+		  package="com.android.yijiashuo"
 		  android:versionCode="1"
 		  android:versionName="1.0">
-	<uses-sdk android:minSdkVersion="19"/>
-	<application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-		<activity android:name="MyActivity"
+
+	<uses-sdk android:minSdkVersion="15"/>
+
+
+	<application android:label="@string/app_name"
+				 android:icon="@drawable/ic_launcher">
+		<activity android:name=".MainActivity"
 				  android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
@@ -13,4 +17,5 @@
 			</intent-filter>
 		</activity>
 	</application>
+
 </manifest>
