--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,10 +6,10 @@
 
 	<uses-sdk android:minSdkVersion="15"/>
 
-
 	<application android:label="@string/app_name"
 				 android:icon="@drawable/ic_launcher">
-		<activity android:name=".MainActivity"
+		<activity android:name=".MainHomeActivity"
+				  android:theme="@style/android:Theme.Holo.NoActionBar"
 				  android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
